--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,12 @@
   <head>
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1>{{ title }}</h1>
-      <hr>
-      {% block content %}{% endblock %}
+      {% block table %}{% endblock %}
     </div>
-    {% block scripts %}{% endblock %}
+  {% block plot %}{% endblock %}
   </body>
 </html>
