--- a/templates/table.html
+++ b/templates/table.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block table %}
+  <h1>{{ title }}</h1>
+  <hr>
   <table id="data" class="table table-striped">
     <thead>
       <tr>
@@ -25,4 +27,33 @@
       {% endfor %}
     </tbody>
   </table>
+{% endblock %}
+
+{% block plot %}
+    <div>
+      <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
+
+    <script>
+      const ctx = document.getElementById('myChart');
+
+      new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: {{ labels | safe }},
+          datasets: [{
+            label: '# of Votes',
+            data: {{ values | safe }},
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+      });
+    </script>
 {% endblock %}
