Add vacation mode

--- a/templates/table.html
+++ b/templates/table.html
@@ -42,7 +42,7 @@
         data: {
           labels: {{ labels | safe }},
           datasets: [{
-            label: '# of Votes',
+            label: 'Heating time',
             data: {{ values | safe }},
             borderWidth: 1
           }]
