--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,36 @@
 <html>
   <head>
     <title>{{ title }}</title>
+      <style>
+          nav a {
+            color: #d64161;
+            font-size: 3em;
+            margin-left: 50px;
+            text-decoration: none;
+            background-color: #f1f1f1;
+            border: 1px solid #ccc;
+        }
+        .table-striped{
+          font-size: 30px;
+        }
+        .tab {
+          overflow: hidden;
+          border: 1px solid #ccc;
+          background-color: #f1f1f1;
+        }
+      </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
-    <div class="container">
-      {% block table %}{% endblock %}
-    </div>
-  {% block plot %}{% endblock %}
+  <div class="menu">
+    <nav>
+          <a href="{{ url_for('index') }}">Status</a>
+          <a href="{{ url_for('heating_data') }}">Grzanie</a>
+    </nav>
+  </div>
+  <div class="content">
+        {% block content %} {% endblock %}
+  </div>
   </body>
 </html>
