Add last update outdoor sensor

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
         <th>Wilgotność</th>
         <th>Ciśnienie</th>
         <th>Stan baterii</th>
+        <th>Ostatnia aktualizacja</th>
     </thead>
       <tbody>
       <tr>
@@ -42,6 +43,7 @@
         <td>{{ outdoor_data.humidity }}</td>
         <td>{{ outdoor_data.pressure }}</td>
         <td>{{ outdoor_data.battery }}</td>
+        <td>{{ outdoor_data.last_updated }}</td>
       </tr>
       </tbody>
     </table>
