--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
   <table id="settings" class="table table-striped">
     <thead>
         <th>Nazwa</th>
-        <th>Aktualna ustawienie</th>
+        <th>Aktualne ustawienie</th>
         <th></th>
         <th></th>
     </thead>
