Add possibility to set temperatures

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <nav>
           <a href="{{ url_for('index') }}">Status</a>
           <a href="{{ url_for('heating_data') }}">Grzanie</a>
+          <a href="{{ url_for('temp_settings') }}">Temperatura</a>
     </nav>
   </div>
   <div class="content">
