--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,8 @@
           <a href="{{ url_for('index') }}">Status</a>
           <a href="{{ url_for('heating_data') }}">Grzanie</a>
           <a href="{{ url_for('temp_settings') }}">Temperatura</a>
-          <a href="{{ url_for('tank_chart') }}">Poziom zbiornika</a>
+          <a href="{{ url_for('tank_chart') }}">Zbiornik</a>
+          <a href="{{ url_for('temp_rooms') }}">Pomieszczenia</a>
     </nav>
   </div>
   <div class="content">
